# sms-forward

./: .env.example  .gitignore  Cargo.toml  config.toml.example  gg-guard.service  plain.txt  readme.md
docs/: actor-registry-research.md
scripts/: install.sh  webhook_receiver.py
src/: main.rs
src/application/: mod.rs
src/application/actors/: at_actor.rs  forwarder_actor.rs  health_actor.rs  messages.rs  mod.rs  reaper_actor.rs  sms_ingest_actor.rs
src/application/service/: mod.rs
src/config/: settings.rs
src/domain/: error.rs  mod.rs
src/domain/model/: forward_status.rs  mod.rs  modem_status.rs  sms_message.rs  sms_part.rs
src/domain/port/: forwarder_port.rs  mod.rs  modem_port.rs  pdu_decoder.rs  sms_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/forwarder/: mod.rs  webhook_forwarder.rs
src/infrastructure/http/: error.rs  mod.rs  routes.rs  state.rs
src/infrastructure/modem/: air780e_at_modem.rs  at_client.rs  at_parser.rs  mod.rs  pdu_decoder.rs
src/infrastructure/persistence/: migration.rs  mod.rs  seaorm_sms_repository.rs
web/: components.json  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts  utils.ts
web/src/components/: sms-content.tsx  status-badge.tsx
web/src/layout/: Sidebar.tsx  Topbar.tsx
web/src/lib/: avatar-color.ts  highlight.ts  status-accent.ts
web/src/pages/: Dashboard.tsx  Messages.tsx  Modem.tsx  Settings.tsx  System.tsx
web/src/store/: highlight.ts  messages.ts  modem.ts  toast.ts
(+12 files in other folders)
