[package]
name = "gg-guard"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
kameo = { version = "0.14", features = ["macros"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
snafu = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
async-trait = "0.1"
serialport = { version = "4", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
console-subscriber = "0.5"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"
# HTTP layer for the Web UI (axum 0.8 + tower-http 0.6 are already resolved
# transitively by console-subscriber, so pinning the same versions keeps the
# dependency graph free of duplicates).
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
